--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "dependencies": {
     "chai": "^4.3.7"
-  }
+  },
+  "main": "problems.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
