--- a/.github/workflows/Mocha_Tests.yml
+++ b/.github/workflows/Mocha_Tests.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: '14'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run Mocha tests
         run: npm test
